Prototype window attributes

--- a/Prototypes.Ui.ElysiumUi/MainWindow.xaml
+++ b/Prototypes.Ui.ElysiumUi/MainWindow.xaml
@@ -2,7 +2,9 @@
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:metro="http://schemas.codeplex.com/elysium/theme"
-              Title="Skype Ninja" Height="350" Width="525">
+              Title="Skype Ninja" Height="350" Width="525"
+              WindowStartupLocation="CenterScreen"
+              ResizeMode="CanMinimize">
     <Grid>
         
     </Grid>
